# 11_aicomm

./: .pre-commit-config.yaml  README.md  cliff.toml
.github/workflows/: build.yml  ubuntu-build.yml  windows-build.yml
chat/: .env  .gitignore  Cargo.toml  README.md  deny.toml
chat/ai-sdk/: Cargo.toml
chat/ai-sdk/src/: lib.rs  util.rs
chat/ai-sdk/src/adapters/: deepseek.rs  mod.rs
chat/chat-core/: Cargo.toml
chat/chat-core/fixture/: decoding.pem  encoding.pem
chat/chat-core/src/: lib.rs
chat/chat-core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat-core/src/util/: jwt.rs
chat/chat-server/: .env  Cargo.toml  chat.yml
chat/chat-server/fixture/: test.sql
chat/chat-server/src/: agent.rs  config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat/chat-server/src/handlers/: agent.rs  auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat/chat-server/src/middlewares/: chat.rs
chat/chat-server/src/models/: agent.rs  chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat/chat-test/: Cargo.toml
chat/chat-test/tests/: chat.rs
chat/migrations/: 20250305015634_agent_adapter.sql
chat/notify-server/: Cargo.toml  index.html  notify.yml
chat/notify-server/src/: config.rs  error.rs  lib.rs  main.rs  sse.rs
chat/rest/: agent.rest  ai.rest  chat.rest  file.rest  message.rest  signin.rest  signup.rest  user.rest
chatapp/: .gitignore  README.md  deny.toml  eslint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
chatapp/src/: App.vue
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
chatapp/src-tauri/src/: config.rs  lib.rs  main.rs  utils.rs
chatapp/src-tauri/src/commands/: mod.rs
chatapp/src-tauri/src/fixtures/: config.default.yaml
chatapp/src/assets/: common.css
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/components/__tests__/: HelloWorld.spec.ts
chatapp/src/global/: index.ts
chatapp/src/router/: index.ts
chatapp/src/service/: index.ts
chatapp/src/stores/: index.ts
chatapp/src/types/: chatapp.d.ts
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
swiftide-pgvector/: .gitignore  Cargo.toml
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
swiftide/benchmarks/: output.txt
swiftide/swiftide-core/src/: node.rs
swiftide/swiftide-integrations/src/lancedb/: retrieve.rs
swiftide/swiftide-integrations/src/treesitter/: queries.rs
swiftide/swiftide/tests/: pgvector.rs
