[package]
name = "swiftide-pgvector"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
derive_builder = "0.20.2"
pgvector = { version = "0.4.0", features = ["sqlx"] }
sqlx = { version = "0.8.3", features = ["postgres"] }
swiftide-core = { path = "../swiftide/swiftide-core" }
tracing = "0.1.41"
