[package]
name = "ai-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = {workspace = true}
dotenv = "0.15.0"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
