[package]
name = "ai-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }
enum_dispatch = "0.3.13"
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
