[package]
name = "chat-test"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }
reqwest = { version = "0.12.12", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
] }
serde = { workspace = true }
tokio = { workspace = true }

[dependencies]
futures = "0.3.31"
reqwest-eventsource = "0.6.0"
serde_json = { workspace = true }
