[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures = "0.3.31"
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chat-core = { workspace = true }
jwt-simple = { workspace = true }
serde_json = { workspace = true }
dashmap = "6.1.0"
tower = { workspace = true }
tower-http = { workspace = true }
